added figsize parameter to Glyph constructor

--- a/logomaker/examples/tests.ipynb
+++ b/logomaker/examples/tests.ipynb
@@ -531,6 +531,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<logomaker.src.Glyph.Glyph at 0x11862bbe0>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAF8AAABUCAYAAADki+s2AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDMuMC4zLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvnQurowAACWpJREFUeJztnF1sW+UZx39PHJO4aUj8kRZKIFGb\nZG1TZZQalU7ADWuK+AjV2AVVVe0ChLRNFWy72hATQ2PSJm1sgjGpvUGdkAYXlApRgaoWUEraqnHS\nBNalrkmXD9HWSdOmSZov288unJiQJrGPfXyO0/knWZaPzvs8j/958/qc/3nfV1SVPPZQYHcB/8/k\nxbeRvPg2khffRvLi20hefBvJi28jefFtpDDZCSJSB/wG+EBVP5g59hPAB5So6qsi8gowAoRV9Z9Z\nrPeWIqn4qhoUkbeB8jmH71XVX4jIb0XEDcRU9c8i8jpwk/gi8jzwPEBJScmW9evXm1N9CkSjUaLR\nKJFIhFgsxuwd/dw7exGhoKCAgoICHA5H4l1EDOUKBAKDqlqR6vlJxU+CLvL+3ZNU9wH7APx+v7a2\ntmaY9qb4DAwMEAqFGBgY4Nq1a1y7do3h4WEysU+KiopYtWoVFRUV3HXXXVRWVlJRUbHoH0VEeozE\nT2XYuQP4MeASkTLgE+CMiPwKQFWviohj5nObkeSZMDExQXd3N6FQiFAoxMjIiOk5Jicn6evro6+v\nj7a2+FdbsWIFtbW11NXVsW7dOoqKitKOL1Yba5n0fFWlq6uLU6dO0dvbm1GvNoOCggKqq6upr6+n\nvr6e4uLigKr6U22f6bBjCbFYjLNnz9Lc3Ew4HLa7nASxWIzu7m66u7v5+OOPDbfPafGj0Shffvkl\nx48f58qVK3aXsyTT09OG2+Ss+BcvXuTgwYMMDAzYXUrWyDnxVZXm5mY+//xzYrGY3eVklZwSf2pq\nioMHD9LV1WV3KZaQM+KPjY3xzjvvcPHiRbtLsYycED8SifDee+9lVXiPx4PP58PtduP1ern99ttx\nOp04HA5isRjT09OMj48nbtDmvrKF7eKrKh999BG9vb2mx66srGTjxo1s2LCB8vLy5A0WYHx8nP7+\nfi5cuMD58+cZHBw0rb5U7nDvA34ErABeVtUxEfkpUAz8UFUfF5F3gRPAKVU9YaSAEydOcObMmTRK\nX5za2lq2b99ORUXKNsuiuFwuamtrqa2tpbGxkcHBQQKBAB0dHYyPj2cUO5Wevwv4NfADYDtxd/Mf\nIrID6J855xLgZhFvZzGCwSBHjhwx0mRJfD4fjz76KOvWrTMt5kI5duzYwSOPPMLZs2cJBAJp/9em\nOuwsZJztBPYCqOoLACLyJnByfuO5ruY999wDxG9KPvzww7SKXoj6+nqampq47bbbTIu5FIWFhTQ0\nNNDQ0EB/fz+ffvqp4RipPEz5F/AK8BRwt4gUiEg10KeqEQAReUlEXgU6FgqgqvtU1a+q/tmhoL29\nndHRUcMFL8TmzZt5+umnLRN+PpWVlezZs8dwu1T8/AAQmHf4v8Af5pzzmpGk0WiUlpYWI00WZe3a\ntTz55JOGvfdcwJbHiJ2dnQwPD2ccx+VysXPnzmUpPNgk/vHjx02J88QTT1BaWmpKLDuwXPzp6WmG\nhoYyjrN69Wo2bNhgQkX2Ybn4U1NTpsTZsmXLsh1uZrGl52eK0+mkoaHBhGrsZVn2/KqqqoyeneYK\nlosfiUQyjrF69WoTKrGfZTljLS++jaxatcruEkwhXVdzP/Bv4D+q+onV0wVdLle2U1hCKj1/F3Fv\n5wPiribEXcxSwDF3uiBwXzaKnE9hoe2PIUwhLVdTVV8GEJG/E/fxl5wuONfVLCsrS7fWBNFoNOMY\nuUAq4s+6miuACyJSAPwc8AC9qUwXnDtXc82aNRlPM5ucnFzWtsIs6bqab8w75xUTa0rKlStX8Pl8\nVqbMCsvyaufy5ct2l2AKlovvcDgyjpFL8zUzwXLxzXja1NPTc0vMZrNcfKfTmXGM0dFRgsGgCdXY\ny7Ls+QCBwPxrgOWHLT2/uLg44zihUGjZ//BaLr6IsHXrVlNivf/++6a4pHZhy6Xm1q1bTRl+wuEw\nR48eNaEie0gqvojcJyK/F5G/iEjJzLGficjLIvK7mc/visiLIrItlaQulwu/P+WlS0ty8uRJ06cb\nWkVaxpqqvgX8Ebhj5hzD0wW3bdtmmkF26NAhTp8+bdsCuYmJCT777DPD7dIy1kSkGHiNmYlT6UwX\nXLlyJQ8//DDHjh0zXPRCHD58mP7+fhobGykpKTElZjKGhoYIBAK0tbUxMTFhuH26xtq7xP38RmC/\niLwEFLHEdEHmLIKePf7ggw8SDof56quvDBe+EJ2dnXR1dfHQQw/xwAMPZMV6jkajBINBWltb6e7u\nzihWusbaU/POMTRdcBYRoampiaGhIb755pt0QtzE1NQUR48e5fTp02zatImNGzeyZs2ajKaZTExM\n0NPTw7lz5wgGg4yNjZlSq+1PJZxOJ8888wz79+83dRX59evXaWlpoaWlhbKyMtauXYvX68Xj8eDx\neCgrK6OwsDCxMiUSiXDjxo2bVqVcunQpa16S7eIDlJaWsmvXLg4cOJDW2JmM4eFh2tvbTY+bKTlj\nKd95550899xzeDweu0uxjJwRH8Dr9fLss89mdWVJLpFT4kN8V4/du3fz2GOPmeKA5jI5MebPR0S4\n//77qampobm5mY6OjlvCv59PzvX8ubjdbpqamti7dy9+v9+Up2C5xLLab2dkZIQvvviCtrY2U2Y7\nm0FRURHr169n8+bNVFdXG9pvZ1mJP8v09DQ9PT2JXaas3g7G7XZTV1dHXV0dVVVVif9IETF3s6NF\npgv+EogR93reAP4EXAVaVfUT41/HGE6nk5qaGmpqagC4evUqX3/9NaFQiHA4zPDwsGm/ESKC1+tN\n7LFWVVWFz+czZWFGWouggbtndhd8Hfg+0KmqB2Y+Z138+bjdbvx+f8KmjsVijI6O3nS3OjY2RiQS\nSew2qKo4HA4cDgcul4uSkhJWrlyZeJWXl+P1erM2PTHdRdDJ3r/DXFcTmBQRc5y05PgA8zZLSM73\njJycdMwXkS3EV5uvAC4AbwEvEBc6BrxJ3NsfAtpVdcnNxkSk1ci4mAlW5konn+U/uHnxvyWnr/Nv\ndewQf98tmstwPsuHnTzfkh92bCSrxlqyGzRV/ZsF+b6zfszkfEm3t1+qfbZ7/kLrue5W1b8C1Rbl\nS6wfMzuZqgaBt+cdvndmfRoisuTGblZYyoZuyMzON2/92OEs5VyqjkXJtvgLTTvpE5EXiW+YZEW+\nxPoxs5OlsL39kvtC5q92bCR/tWMjefFtJC++jeTFt5G8+DaSF99G8uLbyP8A9Kjf53W/N/IAAAAA\nSUVORK5CYII=\n",
+      "text/plain": [
+       "<Figure size 72x72 with 1 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "lm.Glyph(c='C',p=.5,floor=0, ceiling=1, width=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
