Fixed bugs in saliency_to_matrix for parameter cols, added functional tests. Updated jupyter notebooks to remove the parameter draw_now

--- a/logomaker/tutorials/4_saliency_logos.ipynb
+++ b/logomaker/tutorials/4_saliency_logos.ipynb
@@ -264,7 +264,7 @@
     {
      "data": {
       "text/plain": [
-       "<logomaker.src.Logo.Logo at 0x109c8ba90>"
+       "<logomaker.src.Logo.Logo at 0x11482e470>"
       ]
      },
      "execution_count": 4,
