--- a/logomaker/tutorials/6_glyph_objects.ipynb
+++ b/logomaker/tutorials/6_glyph_objects.ipynb
@@ -51,7 +51,7 @@
     {
      "data": {
       "text/plain": [
-       "<logomaker.src.Glyph.Glyph at 0x10666a550>"
+       "<logomaker.src.Glyph.Glyph at 0x10c22c6a0>"
       ]
      },
      "execution_count": 2,
@@ -96,7 +96,7 @@
     {
      "data": {
       "text/plain": [
-       "<logomaker.src.Glyph.Glyph at 0x1067ef390>"
+       "<logomaker.src.Glyph.Glyph at 0x10c34b4e0>"
       ]
      },
      "execution_count": 3,
@@ -150,7 +150,7 @@
     {
      "data": {
       "text/plain": [
-       "<logomaker.src.Glyph.Glyph at 0x10681c2b0>"
+       "<logomaker.src.Glyph.Glyph at 0x10c352438>"
       ]
      },
      "execution_count": 4,
@@ -260,7 +260,7 @@
    ],
    "source": [
     "df = logomaker.sequence_to_matrix('LOGOMAKER')\n",
-    "logo = logomaker.Logo(df, draw_now=False)\n",
+    "logo = logomaker.Logo(df)\n",
     "logo.style_single_glyph(5,'A',font_name='Comic Sans MS', color='dodgerblue', floor=.5)"
    ]
   },
