Removing sys.path.append statements from the tutorials

--- a/logomaker/tutorials/6_glyph_objects.ipynb
+++ b/logomaker/tutorials/6_glyph_objects.ipynb
@@ -29,9 +29,6 @@
     "%matplotlib inline\n",
     "plt.ion()\n",
     "\n",
-    "import sys\n",
-    "sys.path.append('../../')\n",
-    "\n",
     "import logomaker\n",
     "from logomaker import Glyph"
    ]
@@ -51,7 +48,7 @@
     {
      "data": {
       "text/plain": [
-       "<logomaker.src.Glyph.Glyph at 0x10c22c6a0>"
+       "<logomaker.src.Glyph.Glyph at 0x107723898>"
       ]
      },
      "execution_count": 2,
@@ -96,7 +93,7 @@
     {
      "data": {
       "text/plain": [
-       "<logomaker.src.Glyph.Glyph at 0x10c34b4e0>"
+       "<logomaker.src.Glyph.Glyph at 0x1078a3240>"
       ]
      },
      "execution_count": 3,
@@ -150,7 +147,7 @@
     {
      "data": {
       "text/plain": [
-       "<logomaker.src.Glyph.Glyph at 0x10c352438>"
+       "<logomaker.src.Glyph.Glyph at 0x1078c5dd8>"
       ]
      },
      "execution_count": 4,
