added 'gzip' to install_requires list in setup.py. This is needed in examples.py for get_example_datafile()

--- a/logomaker/examples/examples.ipynb
+++ b/logomaker/examples/examples.ipynb
@@ -183,7 +183,7 @@
       "ww_df = logomaker.get_example_matrix('ww_information_matrix',\n",
       "                                     print_description=False)\n",
       "\n",
-      "# create logo object\n",
+      "# create Logo object\n",
       "ww_logo = logomaker.Logo(ww_df,\n",
       "                         font_name='Stencil Std',\n",
       "                         color_scheme='NajafabadiEtAl2017',\n",
@@ -431,10 +431,10 @@
       "                           vsep=.005,\n",
       "                           width=.95)\n",
       "\n",
-      "# color the 'O' at the end of the logo a different coolor\n",
+      "# color the 'O' at the end of the logo a different color\n",
       "logo_logo.style_single_glyph(c='O', p=3, color=[0, 0, 1])\n",
       "\n",
-      "# change the font of 'maker' and flip upright.\n",
+      "# change the font of 'maker' and flip characters upright.\n",
       "logo_logo.style_glyphs_below(font_name='OCR A Std', flip=False, width=1.0)\n",
       "\n",
       "# remove tick marks\n",
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
